--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,4 @@
 VITE_BASE_URL=http://127.0.0.1:33333/cms
-VITE_HASURA_ENDPOINT=http://localhost:8080/v1/graphql
-CODEGEN_HASURA_ENDPOINT=http://localhost:8080/v1/graphql
+VITE_HASURA_ENDPOINT=https://hasura-h6hk.onrender.com/v1/graphql
+CODEGEN_HASURA_ENDPOINT=https://hasura-h6hk.onrender.com/v1/graphql
 CODEGEN_HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey
