--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.(ts|tsx|css|scss)\"",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "start": "graphql-codegen && node server.js"
   },
   "dependencies": {
     "@ant-design/icons": "5.1.4",
